[FE] prevent overflow of footer.  should be responsive in the future !

--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   font-size: $footer-primary-font-size;
+  overflow: hidden;
   
   .div-footer-top-container {
     height: 90px;
